--- a/src/styles/lib/_variables.scss
+++ b/src/styles/lib/_variables.scss
@@ -11,4 +11,6 @@ $screen-xl: 1280px;
 // Shadows
 $shadow: 0 8px 16px rgb(0 0 0 / .1);
 
-// Colours
+// Colors
+$color-light: #fcfcfd;
+$color-dark: #343c56;
